welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:8: error: type mismatch;
 found   : Unit
 required: Int
  if (a!=b && a!=c){
  ^